--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Monoton&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap"
       rel="stylesheet"
     />
